@@ -4,7 +4,6 @@ abstract class ResourceLoaderTestCase extends MediaWikiTestCase {
 	protected static function getResourceLoaderContext() {
 		$resourceLoader = new ResourceLoader();
 		$request = new FauxRequest( array(
-				'debug' => 'true',
 				'lang' => 'en',
 				'modules' => 'startup',
 				'only' => 'scripts',
@@ -16,6 +15,8 @@ abstract class ResourceLoaderTestCase extends MediaWikiTestCase {
 
 	protected function setUp() {
 		parent::setUp();
+
+		ResourceLoader::clearCache();
 
 		$this->setMwGlobals( array(
 			// For ResourceLoader::inDebugMode since it doesn't have context
@@ -42,6 +43,7 @@ class ResourceLoaderTestModule extends ResourceLoaderModule {
 	protected $dependencies = array();
 	protected $group = null;
 	protected $source = 'local';
+	protected $skipFunction = null;
 	protected $targets = array( 'test' );
 
 	public function __construct( $options = array() ) {
@@ -60,6 +62,10 @@ class ResourceLoaderTestModule extends ResourceLoaderModule {
 
 	public function getSource() {
 		return $this->source;
+	}
+
+	public function getSkipFunction() {
+		return $this->skipFunction;
 	}
 }
 
